subnet.tf
# create 1st subnet
resource "aws_subnet" "demosubnet" {
  vpc_id                  = aws_vpc.demovpc.id
  cidr_block              = var.subnet_cidr
  map_public_ip_on_launch = true
  availability_zone       = "us-west-2a"

  tags = {
    "Name" = "Demo subnet"
  }
}
# create 2nd subnet
resource "aws_subnet" "demosubnet1" {
  vpc_id                  = aws_vpc.demovpc.id
  cidr_block              = var.subnet1_cidr
  map_public_ip_on_launch = true
  availability_zone       = "us-west-2b"
  tags = {
    "Name" = "Demo subnet 1"
  }
}
